Aggregation of run script changes