@@ -1,5 +1,6 @@
 #!/bin/bash
 # Start Sparrow locally
+ulimit -n 16384
 
 LOG=/disk1/sparrow/sparrowDaemon.log
 IP=`ifconfig eth0 | grep 'inet addr:' | cut -d: -f2 | awk '{ print $1}'`
@@ -19,7 +20,8 @@ if [ ! $APPCHK = '0' ]; then
   exit 1;
 fi
 
-nohup java -XX:MaxGCPauseMillis=3 -cp ./sparrow/sparrow-1.0-SNAPSHOT.jar edu.berkeley.sparrow.daemon.SparrowDaemon -c sparrow.conf > $LOG 2>&1 &
+# -XX:MaxGCPauseMillis=3 
+nohup java -XX:+UseConcMarkSweepGC -verbose:gc -XX:+PrintGCTimeStamps -Xmx2046m -XX:+PrintGCDetails -cp ./sparrow/sparrow-1.0-SNAPSHOT.jar edu.berkeley.sparrow.daemon.SparrowDaemon -c sparrow.conf > $LOG 2>&1 &
 PID=$!
 echo "Logging to $LOG"
 sleep 1
